src/gen/LaTeXSubsetParser.java
package gen;// Generated from C:/Users/leula/IdeaProjects/PCDLaTeXToHTML/src/LaTeXSubset.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LaTeXSubsetParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, BEGIN_itemize=48, END_itemize=49, BEGIN_enumerate=50, 
		END_enumerate=51, BEGIN_description=52, END_description=53, BEGIN_tabular=54, 
		END_tabular=55, BEGIN_center=56, END_center=57, BEGIN_quote=58, END_quote=59, 
		BEGIN_document=60, END_document=61, HLINE=62, MATH_CMD=63, ESCAPE_SEQ_MATH=64, 
		CLASS=65, TAB_COL_SPEC=66, TAB_ROW_SEP=67, ESCAPE_SEQ=68, COMMENT=69, 
		WS=70, TEXT=71, NUMBER=72;
	public static final int
		RULE_latexDocument = 0, RULE_preamble = 1, RULE_documentclass = 2, RULE_usepackage = 3, 
		RULE_title = 4, RULE_author = 5, RULE_date = 6, RULE_otherCommand = 7, 
		RULE_document = 8, RULE_command = 9, RULE_format_command = 10, RULE_environment = 11, 
		RULE_description_item = 12, RULE_item = 13, RULE_nested_text = 14, RULE_table_content = 15, 
		RULE_math_inline = 16, RULE_math_display = 17, RULE_math_expr = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"latexDocument", "preamble", "documentclass", "usepackage", "title", 
			"author", "date", "otherCommand", "document", "command", "format_command", 
			"environment", "description_item", "item", "nested_text", "table_content", 
			"math_inline", "math_display", "math_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\documentclass'", "'{'", "'}'", "'\\usepackage'", "'\\title'", 
			"'\\author'", "'\\date'", "'\\'", "'\\maketitle'", "'\\newline'", "'\\chapter'", 
			"'\\section'", "'\\subsection'", "'\\subsubsection'", "'\\paragraph'", 
			"'\\subparagraph'", "'\\textbf'", "'\\textit'", "'\\underline'", "'\\texttt'", 
			"'\\label'", "'\\ref'", "'\\include'", "'\\item'", "'['", "']'", "'&'", 
			"'$'", "'\\('", "'\\)'", "'\\begin{math}'", "'\\end{math}'", "'\\['", 
			"'\\]'", "'\\begin{equation}'", "'\\end{equation}'", "'\\begin{displaymath}'", 
			"'\\end{displaymath}'", "'+'", "'-'", "'*'", "'/'", "'^'", "'_'", "'\\frac'", 
			"'('", "')'", "'\\begin{itemize}'", "'\\end{itemize}'", "'\\begin{enumerate}'", 
			"'\\end{enumerate}'", "'\\begin{description}'", "'\\end{description}'", 
			"'\\begin{tabular}'", "'\\end{tabular}'", "'\\begin{center}'", "'\\end{center}'", 
			"'\\begin{quote}'", "'\\end{quote}'", "'\\begin{document}'", "'\\end{document}'", 
			"'\\hline'", null, null, null, null, "'\\\\'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"BEGIN_itemize", "END_itemize", "BEGIN_enumerate", "END_enumerate", "BEGIN_description", 
			"END_description", "BEGIN_tabular", "END_tabular", "BEGIN_center", "END_center", 
			"BEGIN_quote", "END_quote", "BEGIN_document", "END_document", "HLINE", 
			"MATH_CMD", "ESCAPE_SEQ_MATH", "CLASS", "TAB_COL_SPEC", "TAB_ROW_SEP", 
			"ESCAPE_SEQ", "COMMENT", "WS", "TEXT", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LaTeXSubset.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LaTeXSubsetParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LatexDocumentContext extends ParserRuleContext {
		public PreambleContext preamble() {
			return getRuleContext(PreambleContext.class,0);
		}
		public DocumentContext document() {
			return getRuleContext(DocumentContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LaTeXSubsetParser.EOF, 0); }
		public LatexDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_latexDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterLatexDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitLatexDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitLatexDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LatexDocumentContext latexDocument() throws RecognitionException {
		LatexDocumentContext _localctx = new LatexDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_latexDocument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			preamble();
			setState(39);
			document();
			setState(40);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreambleContext extends ParserRuleContext {
		public List<DocumentclassContext> documentclass() {
			return getRuleContexts(DocumentclassContext.class);
		}
		public DocumentclassContext documentclass(int i) {
			return getRuleContext(DocumentclassContext.class,i);
		}
		public List<UsepackageContext> usepackage() {
			return getRuleContexts(UsepackageContext.class);
		}
		public UsepackageContext usepackage(int i) {
			return getRuleContext(UsepackageContext.class,i);
		}
		public List<TitleContext> title() {
			return getRuleContexts(TitleContext.class);
		}
		public TitleContext title(int i) {
			return getRuleContext(TitleContext.class,i);
		}
		public List<AuthorContext> author() {
			return getRuleContexts(AuthorContext.class);
		}
		public AuthorContext author(int i) {
			return getRuleContext(AuthorContext.class,i);
		}
		public List<DateContext> date() {
			return getRuleContexts(DateContext.class);
		}
		public DateContext date(int i) {
			return getRuleContext(DateContext.class,i);
		}
		public List<OtherCommandContext> otherCommand() {
			return getRuleContexts(OtherCommandContext.class);
		}
		public OtherCommandContext otherCommand(int i) {
			return getRuleContext(OtherCommandContext.class,i);
		}
		public PreambleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preamble; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterPreamble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitPreamble(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitPreamble(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreambleContext preamble() throws RecognitionException {
		PreambleContext _localctx = new PreambleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preamble);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 498L) != 0)) {
				{
				setState(48);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(42);
					documentclass();
					}
					break;
				case T__3:
					{
					setState(43);
					usepackage();
					}
					break;
				case T__4:
					{
					setState(44);
					title();
					}
					break;
				case T__5:
					{
					setState(45);
					author();
					}
					break;
				case T__6:
					{
					setState(46);
					date();
					}
					break;
				case T__7:
					{
					setState(47);
					otherCommand();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentclassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(LaTeXSubsetParser.CLASS, 0); }
		public DocumentclassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documentclass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterDocumentclass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitDocumentclass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitDocumentclass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentclassContext documentclass() throws RecognitionException {
		DocumentclassContext _localctx = new DocumentclassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_documentclass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(T__0);
			setState(54);
			match(T__1);
			setState(55);
			match(CLASS);
			setState(56);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UsepackageContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(LaTeXSubsetParser.TEXT, 0); }
		public UsepackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usepackage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterUsepackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitUsepackage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitUsepackage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsepackageContext usepackage() throws RecognitionException {
		UsepackageContext _localctx = new UsepackageContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_usepackage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__3);
			setState(59);
			match(T__1);
			setState(60);
			match(TEXT);
			setState(61);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TitleContext extends ParserRuleContext {
		public Nested_textContext nested_text() {
			return getRuleContext(Nested_textContext.class,0);
		}
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__4);
			setState(64);
			match(T__1);
			setState(65);
			nested_text();
			setState(66);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AuthorContext extends ParserRuleContext {
		public Nested_textContext nested_text() {
			return getRuleContext(Nested_textContext.class,0);
		}
		public AuthorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_author; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterAuthor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitAuthor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitAuthor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuthorContext author() throws RecognitionException {
		AuthorContext _localctx = new AuthorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_author);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__5);
			setState(69);
			match(T__1);
			setState(70);
			nested_text();
			setState(71);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DateContext extends ParserRuleContext {
		public Nested_textContext nested_text() {
			return getRuleContext(Nested_textContext.class,0);
		}
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__6);
			setState(74);
			match(T__1);
			setState(75);
			nested_text();
			setState(76);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OtherCommandContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(LaTeXSubsetParser.TEXT, 0); }
		public List<Nested_textContext> nested_text() {
			return getRuleContexts(Nested_textContext.class);
		}
		public Nested_textContext nested_text(int i) {
			return getRuleContext(Nested_textContext.class,i);
		}
		public OtherCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterOtherCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitOtherCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitOtherCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OtherCommandContext otherCommand() throws RecognitionException {
		OtherCommandContext _localctx = new OtherCommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_otherCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__7);
			setState(79);
			match(TEXT);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(80);
				match(T__1);
				setState(81);
				nested_text();
				setState(82);
				match(T__2);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode BEGIN_document() { return getToken(LaTeXSubsetParser.BEGIN_document, 0); }
		public TerminalNode END_document() { return getToken(LaTeXSubsetParser.END_document, 0); }
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<EnvironmentContext> environment() {
			return getRuleContexts(EnvironmentContext.class);
		}
		public EnvironmentContext environment(int i) {
			return getRuleContext(EnvironmentContext.class,i);
		}
		public List<Math_inlineContext> math_inline() {
			return getRuleContexts(Math_inlineContext.class);
		}
		public Math_inlineContext math_inline(int i) {
			return getRuleContext(Math_inlineContext.class,i);
		}
		public List<Math_displayContext> math_display() {
			return getRuleContexts(Math_displayContext.class);
		}
		public Math_displayContext math_display(int i) {
			return getRuleContext(Math_displayContext.class,i);
		}
		public List<Nested_textContext> nested_text() {
			return getRuleContexts(Nested_textContext.class);
		}
		public Nested_textContext nested_text(int i) {
			return getRuleContext(Nested_textContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(BEGIN_document);
			setState(95); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(95);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(90);
					command();
					}
					break;
				case 2:
					{
					setState(91);
					environment();
					}
					break;
				case 3:
					{
					setState(92);
					math_inline();
					}
					break;
				case 4:
					{
					setState(93);
					math_display();
					}
					break;
				case 5:
					{
					setState(94);
					nested_text();
					}
					break;
				}
				}
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4995899545129844228L) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 19L) != 0) );
			setState(99);
			match(END_document);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public TerminalNode HLINE() { return getToken(LaTeXSubsetParser.HLINE, 0); }
		public Nested_textContext nested_text() {
			return getRuleContext(Nested_textContext.class,0);
		}
		public TerminalNode TEXT() { return getToken(LaTeXSubsetParser.TEXT, 0); }
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaTeXSubsetListener ) ((LaTeXSubsetListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaTeXSubsetVisitor ) return ((LaTeXSubsetVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}
